updated package installing

--- a/roles/docker_installer/tasks/main.yml
+++ b/roles/docker_installer/tasks/main.yml
@@ -8,6 +8,7 @@
         - python3
         - python3-pip
       state: latest
+    become: true
 
 # You can use shell to run other executables to perform actions inline
   - name: Install docker
