--- a/roles/docker_installer/tasks/main.yml
+++ b/roles/docker_installer/tasks/main.yml
@@ -1,7 +1,5 @@
 ---
-# This role installs Docker for centos 8 and enables it on boot
-
-  # Make sure we have the latest yum utils version
+  # Make sure we have the latest required packages
   - name: Install required packages
     apt:
       name: 
