updated variable name

--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -3,6 +3,6 @@
   # Copy the hosts to the config file
   - name: Copy hosts to config file
     copy: 
-      content: "{{ hosts }}"
+      content: "{{ machines }}"
       dest: $HOME/vulsctl/docker/conf.toml
 ...
