--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -11,5 +11,7 @@
     register: hostnames
 
   - name: test
-    debug: var=hostnames
+    debug:
+      msg: "An item: {{ item }}"
+    with_items: "{{ hostnames }}"
 ... 
