--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -14,6 +14,6 @@
     command: chdir=~/vulsctl/docker/ ls
 
   - name: scan hosts
-    shell: sh ~/vulsctl/docker/scan.sh {{ item }}
+    shell: ./scan.sh {{ item }}
     with_items: "{{ hostnames.stdout_lines }}"
 ... 
