--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -10,10 +10,12 @@
     shell: grep "servers\." ~/vulsctl/docker/config.toml | sed -E 's/\[servers\.(.*)\]/\1/'
     register: hostnames
 
-  - name: Go to the folder and execute command
-    command: chdir=~/vulsctl/docker/ ls
+  - name: Run command on specific folder
+    command: ls
+    args:
+      chdir: ~/vulsctl/docker/
 
   - name: scan hosts
-    shell: sh ~/vulsctl/docker/scan.sh {{ item }}
+    shell: ./scan.sh {{ item }}
     with_items: "{{ hostnames.stdout_lines }}"
 ... 
