--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -16,6 +16,6 @@
       chdir: ~/vulsctl/docker/
 
   - name: scan hosts
-    shell: ./scan.sh {{ item }}
+    shell: sh ~/vulsctl/docker/scan.sh {{ item }}
     with_items: "{{ hostnames.stdout_lines }}"
 ... 
