update to script uses

--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -16,14 +16,13 @@
       chdir: ~/vulsctl/docker/
 
   - name: scan hosts
-    shell: sh ~/vulsctl/docker/scan.sh {{ item }}
+    shell: source ~/vulsctl/docker/scan.sh {{ item }}
     with_items: "{{ hostnames.stdout_lines }}"
 
-
   - name: Fetch OVAL DB
-    shell: sh ~/vulsctl/docker/oval.sh --ubuntu
+    shell: source ~/vulsctl/docker/oval.sh --ubuntu
 
   - name: Create report
-    shell: sh ~/vulsctl/docker/report.sh
+    shell: source ~/vulsctl/docker/report.sh
 
 ... 
