--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -13,7 +13,16 @@
   - name: Fetch OVAL DB
     command: ~/vulsctl/docker/oval.sh --ubuntu
 
-  - include_tasks: create_report.yml
-    loop: "{{ hostnames.stdout_lines }}"
+  - name: test
+    debug: {{ hostnames.stdout_lines | join(' ') }}
+
+  # - name: scan hosts
+  #   shell: sh ~/vulsctl/docker/scan.sh {{ hostnames.stdout_lines }}
+
+  # - name: Create report
+  #   command: ~/vulsctl/docker/report.sh
+
+  # - include_tasks: create_report.yml
+  #   loop: "{{ hostnames.stdout_lines }}"
 
 ... 
