--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -10,11 +10,11 @@
     shell: grep "servers\." ~/vulsctl/docker/config.toml | sed -E 's/\[servers\.(.*)\]/\1/'
     register: hostnames
 
-  - name: Fetch OVAL DB
-    command: ~/vulsctl/docker/oval.sh --ubuntu
+  # - name: Fetch OVAL DB
+  #   command: ~/vulsctl/docker/oval.sh --ubuntu
 
   - name: test
-    debug: "{{ hostnames.stdout_lines | join(' ') }}"
+    debug: var="{{ hostnames.stdout_lines | join(' ') }}"
 
   # - name: scan hosts
   #   shell: sh ~/vulsctl/docker/scan.sh {{ hostnames.stdout_lines }}
