--- a/roles/vuls_configure_machines/tasks/main.yml
+++ b/roles/vuls_configure_machines/tasks/main.yml
@@ -10,19 +10,13 @@
     shell: grep "servers\." ~/vulsctl/docker/config.toml | sed -E 's/\[servers\.(.*)\]/\1/'
     register: hostnames
 
-  # - name: Fetch OVAL DB
-  #   command: ~/vulsctl/docker/oval.sh --ubuntu
+  - name: Fetch OVAL DB
+    command: ~/vulsctl/docker/oval.sh --ubuntu
 
-  - name: test
-    debug: var="{{ hostnames.stdout_lines | join(' ') }}"
+  - name: scan hosts
+    shell: sh ~/vulsctl/docker/scan.sh {{ hostnames.stdout_lines | join(' ') }}
 
-  # - name: scan hosts
-  #   shell: sh ~/vulsctl/docker/scan.sh {{ hostnames.stdout_lines }}
-
-  # - name: Create report
-  #   command: ~/vulsctl/docker/report.sh
-
-  # - include_tasks: create_report.yml
-  #   loop: "{{ hostnames.stdout_lines }}"
+  - name: Create report
+    command: ~/vulsctl/docker/report.sh
 
 ... 
