--- a/roles/docker_installer/tasks/main.yml
+++ b/roles/docker_installer/tasks/main.yml
@@ -10,25 +10,24 @@
       state: latest
     become: true
 
-    # Add docker gpg key
+  # Add docker gpg key
   - name: Add docker gpg key
     shell: "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor --batch --yes -o /usr/share/keyrings/docker-archive-keyring.gpg"
 
-    # Set up stable docker repository
+  # Set up the stable docker repository
   - name: Set up stable docker repository
     shell: |
       echo \
       "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
       $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-    # Install docker
+  # Install docker + dependencies
   - name: Install docker
     apt:
       name: 
-        - ca-certificates
-        - curl
-        - gnupg
-        - lsb-release
+        - docker-ce
+        - docker-ce-cli
+        - containerd.io
       update_cache: 
       state: latest
     become: true
