--- a/roles/vuls_install/tasks/main.yml
+++ b/roles/vuls_install/tasks/main.yml
@@ -15,16 +15,23 @@
       dest: $HOME/vulsctl
       force: yes
 
-  # We do this to remove the $PWD usage in the scripts to set it to the directory where vuls is located.
-  # This ensures that the volume mount is done correctly.
-  - name: update scripts
-    shell: sed -i 's/\$PWD/\~\/vulsctl\/docker/' ~/vulsctl/docker/{{ item }}
-    with_items: [ 'scan.sh', 'report.sh', 'oval.sh' ]
+  # # We do this to remove the $PWD usage in the scripts to set it to the directory where vuls is located.
+  # # This ensures that the volume mount is done correctly.
+  # - name: update scripts
+  #   shell: sed -i 's/\$PWD/\~\/vulsctl\/docker/' ~/vulsctl/docker/{{ item }}
+  #   with_items: [ 'scan.sh', 'report.sh', 'oval.sh' ]
 
-  # Update the config.toml file to have all the configured machines added
-  - name: Copy machines to the config file
-    copy: 
-      content: "{{ machines }}"
-      dest: $HOME/vulsctl/docker/config.toml
+  # # Create the results folder & make it readable + executable
+  # - name: create results folder
+  #   file:
+  #     path: ~/vulsctl/docker/results
+  #     state: directory
+  #     mode: '0755'
+
+  # # Update the config.toml file to have all the configured machines added
+  # - name: Copy machines to the config file
+  #   copy: 
+  #     content: "{{ machines }}"
+  #     dest: $HOME/vulsctl/docker/config.toml
 
 ...
